feat(RHINENG-22955): Add sparse fieldsets support to hosts-view endpoint
